<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="286dp"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_header" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_number"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/txt_otp_note"
        android:textColor="@color/black"
        android:textSize="14dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_edittext_background_black"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:gravity="center"
                android:paddingLeft="5dp"
                app:contentColor="@color/black"
                app:defaultNameCode="EC"
                app:textSize="18sp" />


            <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularEditView
                android:id="@+id/et_otp_mobile"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="0.8"
                android:backgroundTint="@color/transparent"
                android:enabled="false"
                android:hint="@string/phn_no"
                android:inputType="phone"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <!--
    <ImageView
        android:id="@+id/btn_edit_number"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|right"
        android:padding="10dp"
        android:ems="10"
        app:tint="@color/black" />-->

    </LinearLayout>

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:id="@+id/getOtp"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="70dp"
        android:text="@string/get_otp"
        android:textColor="@color/wallet_blue"
        android:textSize="18sp" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:id="@+id/otpDemoNote"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/txt_otp_demo"
        android:textColor="@color/black"
        android:textSize="14dp" />

        <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularEditView
            android:id="@+id/user_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:inputType="text"
            android:maxLength="10"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/drawable_edittext_background_black"
            android:textColor="@color/black"
            android:textSize="20sp" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:id="@+id/notRecevied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt_no_otp"
        android:textColor="@color/wallet_blue"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_confirm_otp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/wallet_blue"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/txt_proceed"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

    </LinearLayout>