<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NoInternetActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/internet" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@color/red"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/close"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noInternetMessage"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"/>


</LinearLayout>