<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true">

        <ImageButton
            android:id="@+id/btn_forgot_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:tint="@android:color/black"
            app:srcCompat="@drawable/close" />

        <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/btn_forgot_cancel"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_pass_btn"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <com.nikola.user.NewUtilsAndPref.CustomText.CustomBoldItalicTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_txt_note"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularEditView
            android:id="@+id/et_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/wallet_blue"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="6dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:background="@color/wallet_blue">


        <com.nikola.user.NewUtilsAndPref.CustomText.CustomRegularTextView
            android:id="@+id/forgot_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/req_pass_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>